# lipilekhika

./: .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.agent/workflows/: build-android-libs.md
.cargo/: config.toml
.github/workflows/: dart_ci.yml  deploy_web_client.yml  deploy_web_test_client.yml  go_ci.yml  js_ci.yml  python_ci.yml  release-js.yml  release_js.yml  release_mobile_app.yml  release_pc_app.yml  release_python.yml  release_rust.yml  rust_ci.yml
client/web-test-client/: .prettierignore  .prettierrc  index.html  package.json  tsconfig.app.json  vite.config.ts
client/web-test-client/src/: App.svelte  App.tsx  Switch.svelte  main.ts
client/web-test-client1/: .prettierrc  astro.config.mjs  package.json
client/web-test-client1/src/: App.tsx
desktop-client/: .gitignore  CHANGELOG.md  Cargo.toml  build.rs  bundle.ps1
desktop-client/Installer/: Product.wxs
desktop-client/lipiparivartak/: package.json  svelte.config.js  vite.config.js
desktop-client/lipiparivartak/src/: app.html
desktop-client/lipiparivartak/src-tauri/: tauri.conf.json
desktop-client/lipiparivartak/src/routes/: +page.svelte
desktop-client/lipiparivartaka/: .gitignore  .prettierignore  package.json  prepare_build.ts  svelte.config.js  tsconfig.json  vite.config.js
desktop-client/lipiparivartaka/src/: app.css  app.html
desktop-client/lipiparivartaka/src-tauri/: Cargo.toml  tauri.conf.json
desktop-client/lipiparivartaka/src-tauri/capabilities/: default.json
desktop-client/lipiparivartaka/src-tauri/icons/: icon.icns
desktop-client/lipiparivartaka/src-tauri/src/: lib.rs
desktop-client/lipiparivartaka/src/components/script/: CustomOptions.svelte  ScriptSelector.svelte  script_avatar.ts  state.ts
desktop-client/lipiparivartaka/src/routes/: +layout.svelte  +layout.ts  +page.svelte  TypingHelper.svelte
desktop-client/lipiparivartaka/src/state/: app_state.ts
desktop-client/src/: data.rs  main.rs  persistent_state.rs  platform.rs  posthog.rs  tray.rs
desktop-client/src/mac/: constants.rs  hooks.rs  mod.rs  runtime.rs
desktop-client/src/ui/: data.rs  mod.rs  nootification.rs  notification.rs  thread_receive.rs  thread_recieve.rs  typing_helper.rs  ui.rs  version_check.rs
desktop-client/src/win/: constants.rs  hooks.rs  mod.rs  notification.rs  runtime.rs
docs/docs-and-web-client/: .prettierignore  astro.config.mjs  components.json  package.json  tsconfig.json
docs/docs-and-web-client/integrations/: netlify-redirects.ts
docs/docs-and-web-client/public/: manifest.json  robots.txt
docs/typing_tool_usage/: .prettierignore  .prettierrc  astro.config.mjs  package.json
docs/typing_tool_usage/src/: RootLayout.astro
mobile-app/: CHANGELOG.md  Tasks.md  app.json  eas.json  package.json  pubspec.yaml  run.sh  tailwind.config.js
mobile-app/android/: build.gradle.kts
mobile-app/android/app/: build.gradle.kts
mobile-app/app/: _layout.tsx  index.tsx
mobile-app/components/: AboutPage.tsx  CustomOptions.tsx  MenuDrawer.tsx  ScriptSelector.tsx  SettingsPopover.tsx  ThemeContext.tsx  TypingHelper.tsx  optionDescriptions.ts  scriptAvatar.ts  scriptCategories.ts  types.ts
mobile-app/flutter/: README.md  pubspec.yaml
mobile-app/flutter/lib/: main.dart
mobile-app/flutter/test/: widget_test.dart
mobile-app/hooks/: useTypingHandler.ts
mobile-app/lib/models/: presets.dart
mobile-app/lib/screens/: about_screen.dart  home_screen.dart  transliterate_screen.dart
mobile-app/lib/theme/: theme_provider.dart
mobile-app/lib/utils/: font_config.dart
mobile-app/lib/widgets/: preset_selector.dart  script_selector.dart  transliteration_formatter.dart  transliteration_options.dart  typing_helper_modal.dart
plugins/fcitx5/: CMakeLists.txt  README.md  build.sh
plugins/fcitx5/addon/: CMakeLists.txt  lipilekhika-addon.conf.in  lipilekhika-devanagari.conf  lipilekhika.cpp  lipilekhika.h
plugins/fcitx5/addon/conf/: lipilekhika-assamese.conf  lipilekhika-bengali.conf  lipilekhika-brahmi.conf  lipilekhika-devanagari.conf  lipilekhika-granth.conf  lipilekhika-gujarati.conf  lipilekhika-gurumukhi.conf  lipilekhika-kannada.conf  lipilekhika-malayalam.conf  lipilekhika-modi.conf  lipilekhika-odia.conf  lipilekhika-purna-devanagari.conf  lipilekhika-romanized.conf  lipilekhika-sharada.conf  lipilekhika-siddham.conf  lipilekhika-sinhala.conf  lipilekhika-tamil-extended.conf  lipilekhika-tamil.conf  lipilekhika-telugu.conf
plugins/fcitx5/binding/: Cargo.toml  build.rs  cbindgen.toml  gen_bind.sh
plugins/fcitx5/binding/include/: lipilekhika_typing.h
plugins/fcitx5/binding/src/: lib.rs
scripts/: devanagari-inputs.txt  gen-test-data.ts  sanskrit-inputs.txt  subpath-tag.go  vedic-inputs.txt
scripts/tools/old_lipi_lekhika/: helper.js  index.ts  lekhika_core.js  normalise_lang.ts
test_data/: devangari_other_brahmic_scripts.json  devangari_other_brahmic_scripts.yaml
test_data/transliteration/: 01-brahmic.yaml  01-manual_brahmic.yaml  02-manual_others.yaml  02-others.yaml  04-options.yaml  05-vedic.yaml  1-manual_brahmic.yaml  1-manual_checks.yaml  2-manual_others.yaml  3-manual-multi.yaml  auto-dev-brahmic-1.yaml  auto-dev-brahmic-10.yaml  auto-dev-brahmic-11.yaml  auto-dev-brahmic-12.yaml  auto-dev-brahmic-13.yaml  auto-dev-brahmic-14.yaml  auto-dev-brahmic-15.yaml  auto-dev-brahmic-16.yaml  auto-dev-brahmic-17.yaml  auto-dev-brahmic-2.yaml  auto-dev-brahmic-3.yaml  auto-dev-brahmic-4.yaml  auto-dev-brahmic-5.yaml  auto-dev-brahmic-6.yaml  auto-dev-brahmic-7.yaml  auto-dev-brahmic-8.yaml  auto-dev-brahmic-9.yaml  auto-dev-other-1.yaml  auto-dev-other-2.yaml  auto-dev-other-3.yaml  auto-devangari_non_brahmic_scripts.yaml  auto-devangari_other_brahmic_scripts.yaml  auto-noral-other-1.yaml  auto-noral-other-2.yaml  auto-normal_other_scripts.yaml
test_data/transliteration/auto-dev-brahmic/: auto-dev-brahmic-1.yaml  auto-dev-brahmic-12.yaml  auto-dev-brahmic-18.yaml  auto-dev-brahmic-2.yaml  auto-dev-brahmic-21.yaml  auto-dev-brahmic-22.yaml  (+4 more)
test_data/typing/: 01-typin-mode.yaml  01-typing-mode.yaml
(+365 files in other folders)
