[workspace]
members = [
    "desktop-client",
    "packages/rust",
    "desktop-client/lipiparivartaka/src-tauri",
    "packages/js/wasm",
    "packages/js/binding",
    "packages/python/binding",
    "packages/dart/binding",
    "plugins/fcitx5/binding",
]
resolver = "3"

[profile.bench]
lto = true
codegen-units = 1

# Speed-first release builds (native bindings, desktop). Default panic is unwind.
[profile.release]
lto = true
codegen-units = 1
opt-level = 3

# WASM-only release: inherits tuning above; abort (no unwinding on wasm32).
[profile.wasm-release]
inherits = "release"
panic = "abort"
