[package]
name = "lipilekhika-ui"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
iced = { version = "0.14.0", features = ["image", "advanced"] }
lipilekhika = { path = "../packages/rust" }
iced_futures = "0.14.0"
smol = "2"
crossbeam-channel = "0.5.15"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Globalization",
] }
