[package]
name = "lipilekhika-ui"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
iced = { version = "0.14.0", features = ["image", "advanced"] }
lipilekhika = { path = "../packages/rust" }
iced_futures = "0.14.0"
crossbeam-channel = "0.5.15"
tray-icon = "0.21.3"
image = "0.25"
smol = "2.0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Globalization",
] }
