[package]
name = "lipilekhika-ui"
version = "1.0.0"
edition = "2024"
publish = false

[dependencies]
iced = { version = "0.14.0", features = ["image", "advanced", "svg"] }
iced_aw = { version = "0.13.0", features = ["full"] }
lipilekhika = { path = "../packages/rust" }
iced_futures = "0.14.0"
crossbeam-channel = "0.5.15"
tray-icon = "0.21.3"
image = "0.25"
smol = "2.0.2"
dark-light = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
octocrab = { version = "0.38", features = ["timeout"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = [
    "rustls-tls",
], default-features = false }
posthog-rs = { version = "0.3.5", default-features = false }
dirs = "6.0.0"
uuid = { version = "1.19", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Globalization",
] }

[build-dependencies]
embed-resource = "2"
dotenvy = "0.15.7"
