[package]
name = "lipilekhika-fcitx5-binding"
version = "0.1.0"
edition = "2024"
publish = false
build = "build.rs"

[lib]
name = "lipilekhika_typing"
crate-type = ["cdylib"]

[dependencies]
lipilekhika = "1.0.5"
# Use published version instead of path to avoid bun dependency for the build/install

[build-dependencies]
cbindgen = "0.29.2"
